force-app/main/default/objects/QCC_Recovery_EFT_Request_Header__mdt/QCC_Recovery_EFT_Request_Header__mdt.object-meta.xml
<CustomObject>
    <description>This setting holds the header level attributes that are sent with every QCC EFT Recovery API request from Salesforce to EQ (CDP2-271)</description>
    <label>QCC Recovery EFT Request Header</label>
    <pluralLabel>QCC Recovery EFT Request Headers</pluralLabel>
</CustomObject>