force-app/main/default/objects/QCC_Recovery_EFT_Request_Header__mdt/fields/Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1__c</fullName>
    <label>Address Line 1</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>