force-app/main/default/objects/QCC_Recovery_EFT_Request_Header__mdt/fields/Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_3__c</fullName>
    <label>Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>