force-app/main/default/objects/QCC_Recovery_EFT_Request_Header__mdt/fields/Customer_Care_Shared_Mail__c.field-meta.xml
<CustomField>
    <fullName>Customer_Care_Shared_Mail__c</fullName>
    <label>Customer Care Shared Mail</label>
    <required>true</required>
    <type>Email</type>
</CustomField>