force-app/main/default/objects/QCC_Recovery_EFT_Request_Header__mdt/fields/Customer_Care_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Care_Site_Name__c</fullName>
    <label>Customer Care Site Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>