force-app/main/default/objects/QCC_Recovery_EFT_Request_Header__mdt/fields/MaxNoOfRcvyInReq__c.field-meta.xml
<CustomField>
    <fullName>MaxNoOfRcvyInReq__c</fullName>
    <defaultValue>50</defaultValue>
    <description>Maximum # of recoveries in a batch that can be sent to EQ</description>
    <label>MaxNoOfRcvyInReq</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>