force-app/main/default/objects/QCC_Recovery_EFT_Request_Header__mdt/fields/MaxRecvyTotal__c.field-meta.xml
<CustomField>
    <fullName>MaxRecvyTotal__c</fullName>
    <defaultValue>10000.00</defaultValue>
    <description>Recoveries Total allowed per batch sent to EQ</description>
    <label>MaxRecvyTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>