force-app/main/default/objects/QCC_Recovery_EFT_Request_Header__mdt/fields/Prepared_By__c.field-meta.xml
<CustomField>
    <fullName>Prepared_By__c</fullName>
    <label>Prepared By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>