force-app/main/default/objects/QCC_Recovery_EFT_Request_Header__mdt/fields/Uploader_Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Uploader_Phone_No__c</fullName>
    <label>Uploader Phone No.</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>