force-app/main/default/objects/QCC_Recovery_EFT_Request_Header__mdt/fields/ZIP_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>ZIP_Postal_Code__c</fullName>
    <label>ZIP/Postal Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>